# trini_energy

./: .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 33d0743bec3d_.py  adfa38134161_.py  b2283365b0a0_.py  b802911f087c_create_test_table.py  ce633b483f2c_create_test_table.py  d95681946a51_.py  edd0a4e69358_added_account_table.py  f2c5c9bc6d73_.py
data_pipelines/: pdf_parser.py
docker/api/: Dockerfile
docker/nginx/: Dockerfile
docker/node/: Dockerfile
fastapi_backend/: database.py  main.py  models.py  pyproject.toml
react_frontend/: package-lock.json  package.json
react_frontend/public/: index.html
react_frontend/src/: App.js  NaturalGasProductionChart.js  Navbar.js  ThemeSwitcher.js
